--- a/jquery_metodos_insercion.html
+++ b/jquery_metodos_insercion.html
@@ -22,7 +22,10 @@
 		<script src="javascript/jquery-1.10.2.min.js"></script>
 		<script type="text/javascript">
 			$(function() {
-
+				//$("#caja1").after("<p>Nuevo parrafo</p>");
+				//$("#caja1").before("<p>Nuevo parrafo</p>");
+				//$("#caja1").prepend("<p>Nuevo parrafo</p>");
+				$("#caja1").append("<p>Nuevo parrafo</p>");
 			});
 
 		</script>
