--- a/e3_gomap.html
+++ b/e3_gomap.html
@@ -6,7 +6,7 @@
 		<style>
 
            /* SUPER IMPORTANTE PONER ANCHO Y ALTO A LA CAJA */
-		   #mapa{
+		   #mimapa{
 		   	  height: 600px;
 		   	  width: 600px;
 		   }
@@ -15,9 +15,32 @@
 
 		<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
 		<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-		<script src="javascript/jquery.gomap-1.3.2.min"></script>
+		<script src="javascript/jquery.gomap-1.3.2.min.js"></script>
 		<script>
-
+		
+		$(function(){
+			navigator.geolocation.getCurrentPosition(function(posicion){
+				var latitud = posicion.coords.latitude;
+				var longitud = posicion.coords.longitude;
+				//alert("Latitud: "+latitud+", Longitud: "+longitud);
+				$("#mimapa").goMap({
+					zoom: 15,
+					maptype: "ROADMAP",
+					markers:[{
+						/*latitude:latitud,
+						longitude:longitud*/
+						address: "Montevideo Distrito Federal",
+						icon: "imagenes/apartamento.png",
+						draggable: true,
+						title: "Este es un apartamento",
+						html: "<h1>Un apartyamento en Montevideo</h1>"
+					},{
+						address:"Metro Poli Distrito Federal"
+					}]
+				});
+			});
+		});
+		
 		</script>
 
 	</head>
