--- a/ejercicios/ejercicio4.html
+++ b/ejercicios/ejercicio4.html
@@ -6,15 +6,28 @@
 
 		<style>
 			body {
-				background: url(imagenes/fondo_granulado.png);
+				background: url(../imagenes/fondo_granulado.png);
 			}
 
 		</style>
 
-		<script src="javascript/jquery-1.10.2.min.js"></script>
+		<script src="../javascript/jquery-1.10.2.min.js"></script>
 		<script type="text/javascript">
-
 			$(function() {
+
+				function miFuncion(datos) {
+
+					$.each(datos.items, function(iteracion, foto) {
+						$("#contenedor").append("<div>"+foto.description+"</div>");
+					});
+
+				};
+
+				$(function() {
+					var url = "http://api.flickr.com/services/feeds/photos_public.gne?ids=25053835@N03&format=json&jsoncallback=miFuncion";
+					$.getScript(url);
+
+				});
 
 			});
 
